tasks/testsuite/fixtures/parser-misc/pass/stmt-class-static-blocks-with-await-in-fn.js
class Foo{
            static {
                function foo() {
                    var await = 'bar';
                }
            }
        }