tasks/testsuite/fixtures/parser-misc/fail/stmt-await-as-ident.js
async function foo() { let await = 1; }